--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             </div>
         </nav>
     </header>
-</body>
 
+<main>
+<section id="dsmovie-card-list" class="container">
+  
+    <div class="dsmovie-card">
+        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/rcA17r3hfHtRrk3Xs3hXrgGeSGT.jpg" alt="Stranger Things">
+        <div class="dsmovie-card-description">
+        <h3>Stranger Things</h3>
+        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+        </div>
+</div>
+</section>
+
+</main>
+
+</body>
 </html>
