Listagem de cards

--- a/index.html
+++ b/index.html
@@ -25,19 +25,151 @@
         </nav>
     </header>
 
-<main>
-<section id="dsmovie-card-list" class="container">
-  
-    <div class="dsmovie-card">
-        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/rcA17r3hfHtRrk3Xs3hXrgGeSGT.jpg" alt="Stranger Things">
-        <div class="dsmovie-card-description">
-        <h3>Stranger Things</h3>
-        <a class="dsmovie-btn" href="form.html">Avaliar</a>
-        </div>
-</div>
-</section>
+    <main>
+        <section id="dsmovie-card-list" class="container">
 
-</main>
+            <div class="row">
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/rcA17r3hfHtRrk3Xs3hXrgGeSGT.jpg"
+                            alt="Stranger Things">
+                        <div class="dsmovie-card-description">
+                            <h3>Stranger Things</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/41yaWnIT8AjIHiULHtTbKNzZTjc.jpg"
+                            alt="The Flash">
+                        <div class="dsmovie-card-description">
+                            <h3>The Flash</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/ccaZ3yyyC6rcMAQrlLZ51FpahNO.jpg"
+                            alt="Lucifer">
+                        <div class="dsmovie-card-description">
+                            <h3>Lucifer</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/iQFcwSGbZXMkeyKrxbPnwnRo5fl.jpg"
+                            alt="Homem-Aranha: Sem Volta Para Casa">
+                        <div class="dsmovie-card-description">
+                            <h3>Homem-Aranha: Sem Volta Para Casa</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/tRS6jvPM9qPrrnx2KRp3ew96Yot.jpg"
+                            alt="Batman">
+                        <div class="dsmovie-card-description">
+                            <h3>Batman</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/qyDlF1U1yayXIUniECmGA1oBwZy.jpg"
+                            alt="Suits">
+                        <div class="dsmovie-card-description">
+                            <h3>Suits</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/cdk9uWz5AQlWZN7Mg5BkNyrpnok.jpg"
+                            alt="Outer Banks">
+                        <div class="dsmovie-card-description">
+                            <h3>Outer Banks</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/1F2RnXLc0fmRt7iWfBK4mNVsjno.jpg"
+                            alt="Teen Wolf">
+                        <div class="dsmovie-card-description">
+                            <h3>Teen Wolf</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/uro2Khv7JxlzXtLb8tCIbRhkb9E.jpg"
+                            alt="The Walking Dead">
+                        <div class="dsmovie-card-description">
+                            <h3>The Walking Dead</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/uCqXSfHymdbDMsFx8t0u0OPSuve.jpg"
+                            alt="The Last Kingdom">
+                        <div class="dsmovie-card-description">
+                            <h3>The Last Kingdom</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/m7FqiUOvsSk7Ulg2oRMfFGcLeT9.jpg"
+                            alt="Bridgerton">
+                        <div class="dsmovie-card-description">
+                            <h3>Bridgerton</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wiE9doxiLwq3WCGamDIOb2PqBqc.jpg"
+                            alt="Peaky Blinders: Sangue, Apostas e Navalhas">
+                        <div class="dsmovie-card-description">
+                            <h3>Peaky Blinders: Sangue, Apostas e Navalhas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </section>
+
+    </main>
 
 </body>
+
 </html>
